# howzat

./: .gitignore  Cargo.toml  README.md  REPORT.md
.github/workflows/: bench.yml  pypi-extra-cp314.yml  pypi.yml
cddlib-rs/: Cargo.toml  README.md
cddlib-rs/src/: backend.rs  lib.rs  raw.rs
cddlib-sys/: Cargo.toml  README.md  build.rs
howzat/: Cargo.toml  README.md
howzat-ffi-c/: Cargo.toml  README.md  cbindgen.toml
howzat-ffi-c/include/: howzat_ffi.h
howzat-ffi-c/src/: lib.rs
howzat-ffi-py/: Cargo.toml  README.md  pyproject.toml
howzat-ffi-py/examples/: bindings_vs_cddlib_polymake.py  demo.py
howzat-ffi-py/src/: lib.rs
howzat-kit/: Cargo.toml  README.md
howzat-kit/src/: inequalities.rs  lib.rs  vertices.rs
howzat-kit/src/backend/: cddlib.rs  howzat_common.rs  howzat_dd.rs  howzat_lrs.rs  lrslib.rs  mod.rs  ppl.rs
howzat/src/: context.rs  error.rs  lib.rs  lp.rs  matrix.rs  num.rs  prelude.rs  types.rs  verify.rs
howzat/src/dd/: basis.rs  builder.rs  engine.rs  index.rs  mod.rs  ray.rs  sat.rs  state.rs  tests.rs  zero.rs
howzat/src/dd/umpire/: adaptive_precision.rs  int.rs  mod.rs  multi_precision.rs  policies.rs  single_precision.rs
howzat/src/lrs/: input.rs  mod.rs  output.rs
howzat/src/polyhedron/: build.rs  int.rs  mod.rs  repair.rs  resolve.rs
howzat/tests/: cdd_lrs_parity.rs  cdd_parity.rs  conversion.rs  conversion_more.rs  drum_option_parity.rs  find_umpire_counterexamples.rs  fixtures.rs  geometry.rs  golden_projection.rs  incidence.rs  lp_verify.rs  lrs_incidence_parity.rs  lrs_parity.rs  option_parity.rs  polydb_roundtrip.rs  polyhedron.rs  repro_stats.rs  resolution_frcheck.rs  umpire_regressions.rs  umpires.rs
howzat/tests/support/: common.rs
hullabaloo/: Cargo.toml  DESIGN.md
hullabaloo-core/: Cargo.toml
hullabaloo-geom/: Cargo.toml
hullabaloo/src/: lib.rs
hullabaloo/tests/: drum_stats.rs  drum_width.rs
hullabaloo/tests/support/: backend.rs
lrslib-rs/: Cargo.toml  README.md
lrslib-rs/src/: lib.rs
lrslib-rs/src/raw/: mod.rs
lrslib-rs/src/raw/mp/: b128.rs  gmp.rs
lrslib-rs/tests/: cddlib_parity.rs
lrslib-sys/: Cargo.toml  README.md  build.rs
ppl-rs/: Cargo.toml  README.md
ppl-rs/src/: lib.rs  raw.rs
ppl-sys/: Cargo.toml  README.md  build.rs
ppl-sys/src/: lib.rs
scripts/: bench_matrix.py
scripts/bench_reports/: collate_and_plot.py  collate_fr_errors.py
