[workspace]
resolver = "3"
members = [
    "cddlib-sys",
    "cddlib-rs",
    "hullabaloo-core",
    "hullabaloo-geom",
    "hullabaloo",
    "howzat",
    "howzat-kit",
    "howzat-ffi-c",
    "howzat-ffi-py",
    "lrslib-sys",
    "lrslib-rs",
    "ppl-sys",
    "ppl-rs",
]

[workspace.dependencies]
cddlib-rs = { path = "cddlib-rs", version = "0.3" }
cddlib-sys = { path = "cddlib-sys", version = "0.3", default-features = false }
howzat = { path = "howzat", version = "0.3.9" }
howzat-kit = { path = "howzat-kit", version = "0.3.9" }
hullabaloo = { package = "hullabaloo-core", path = "hullabaloo-core", version = "0.3", default-features = false }
hullabaloo-core = { path = "hullabaloo-core", version = "0.3", default-features = false }
hullabaloo-geom = { path = "hullabaloo-geom", version = "0.3", default-features = false }
lrslib-rs = { path = "lrslib-rs", version = "0.3" }
lrslib-sys = { path = "lrslib-sys", version = "0.3" }
ppl-rs = { path = "ppl-rs", version = "0.3", default-features = false }
ppl-sys = { path = "ppl-sys", version = "0.3", default-features = false }

bindgen = "0.72"
syntheon = { version = "0.3" }

[profile.release-debug]
inherits = "release"
debug = true

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
debug = false
panic = "abort"

[profile.release-lto-debug]
inherits = "release"
codegen-units = 1
lto = "fat"
debug = true
