[package]
name = "howzat-ffi-c"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "C bindings for howzat backend runner APIs."
readme = "README.md"
publish = true

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = []
use-system-gmp = ["howzat-kit/use-system-gmp"]

[dependencies]
howzat-kit = { path = "../howzat-kit", version = "0.3.0", features = ["pic"] }
hullabaloo = { path = "../hullabaloo", version = "0.3.0" }

calculo = { version = "0.3.0" }
gmp-mpfr-sys = { version = "~1.6", default-features = false }
rug = { version = "1", default-features = false, features = ["integer", "rational", "std"] }
