[package]
name = "howzat-ffi-c"
version = "0.3.9"
edition = "2024"
license = "AGPL-3.0-only"
description = "C bindings for howzat backend runner APIs."
readme = "README.md"
publish = true
repository = "https://github.com/khoek/howzat"

keywords = ["howzat", "ffi", "c", "polyhedra", "geometry"]
[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = []
use-system-gmp = ["howzat-kit/use-system-gmp"]

[dependencies]
howzat-kit = { workspace = true, features = ["pic"] }
hullabaloo = { workspace = true, features = ["simd"] }
calculo = { workspace = true }

gmp-mpfr-sys = { version = "1", default-features = false }
rug = { version = "1", default-features = false, features = ["integer", "rational", "std"] }
