[package]
name = "howzat-ffi-py"
version = "0.3.9"
edition = "2024"
license = "AGPL-3.0-only"
description = "PyO3 bindings for howzat backend runner APIs."
readme = "README.md"
publish = true
repository = "https://github.com/khoek/howzat"
exclude = ["dist/**"]

keywords = ["howzat", "ffi", "python", "pyo3", "polyhedra"]
[lib]
crate-type = ["cdylib"]

[features]
default = []
use-system-gmp = ["howzat-kit/use-system-gmp"]

[dependencies]
howzat-kit = { workspace = true, features = ["pic"] }
hullabaloo = { workspace = true, features = ["simd"] }
calculo = { workspace = true }

numpy = "0.28"
pyo3 = { version = "0.28", features = ["extension-module"] }
rug = { version = "1", default-features = false, features = ["integer", "rational", "std"] }
