[package]
name = "howzat-kit"
version = "0.3.9"
edition = "2024"
license = "AGPL-3.0-only"
description = "Backend spec parsing and high-performance runner API for howzat."
readme = "README.md"
publish = true
repository = "https://github.com/khoek/howzat"

keywords = ["howzat", "polyhedra", "backend", "parser", "geometry"]
[features]
default = []
pic = ["cddlib-rs/pic", "ppl-rs/pic"]
use-system-gmp = [
    "dep:gmp-mpfr-sys",
    "cddlib-rs/use-system-gmp",
    "lrslib-rs/use-system-gmp",
    "ppl-rs/use-system-gmp",
]

[dependencies]
howzat = { workspace = true }
hullabaloo = { workspace = true, features = ["serde", "simd"] }
cddlib-rs = { workspace = true, features = ["gmprational"] }
lrslib-rs = { workspace = true, features = ["gmp"] }
ppl-rs = { workspace = true, features = ["gmp"] }
calculo = { workspace = true }

gmp-mpfr-sys = { version = "1", default-features = false, optional = true, features = ["use-system-libs"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
rug = { version = "1", default-features = false, features = ["integer", "rational", "std"] }

[dev-dependencies]
serde_json = { version = "1", features = ["float_roundtrip"] }
