[package]
name = "hullabaloo-geom"
version = "0.3.3"
edition = "2024"
license = "AGPL-3.0-only"
description = "Geometry construction layer for hullabaloo."
readme = "README.md"
repository = "https://github.com/khoek/howzat"

keywords = ["polyhedra", "geometry", "construction", "convex", "hull"]
[lib]
name = "hullabaloo_geom"
path = "src/lib.rs"

[features]
default = ["simd"]
simd = ["calculo/simd", "hullabaloo-core/simd"]
serde = ["hullabaloo-core/serde"]

[dependencies]
hullabaloo-core = { workspace = true }
calculo = { version = "0.3", default-features = false }

[dev-dependencies]
cddlib-rs = { workspace = true }

anyhow = "1"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
