[package]
name = "hullabaloo"
version = "0.3.3"
edition = "2024"
license = "AGPL-3.0-only"
description = "Backend-agnostic geometry construction utilities."
readme = "README.md"
repository = "https://github.com/khoek/howzat"

keywords = ["polyhedra", "geometry", "convex-hull", "utilities", "backend"]
[lib]
name = "hullabaloo"
path = "src/lib.rs"

[features]
default = ["simd"]
simd = ["hullabaloo-core/simd", "hullabaloo-geom/simd"]
serde = ["hullabaloo-core/serde", "hullabaloo-geom/serde"]

[dependencies]
hullabaloo-core = { workspace = true }
hullabaloo-geom = { workspace = true }
