[package]
name = "lrslib-rs"
version = "0.3.3"
edition = "2024"
license = "AGPL-3.0-only"
description = "Idiomatic Rust bindings around lrslib."
readme = "README.md"
repository = "https://github.com/khoek/howzat"

keywords = ["lrslib", "ffi", "bindings", "polyhedra", "geometry"]
[lib]
name = "lrslib_rs"
path = "src/lib.rs"

[features]
default = []
gmp = ["dep:gmp-mpfr-sys", "lrslib-sys/gmp"]
use-system-gmp = ["lrslib-sys/use-system-gmp"]

[dependencies]
lrslib-sys = { workspace = true }
hullabaloo = { workspace = true, features = ["simd"] }
calculo = { version = "0.3", default-features = false, features = ["rug"] }

gmp-mpfr-sys = { version = "1", default-features = false, optional = true }
thiserror = "2"
libc = "0.2"
rug = { version = "1", default-features = false, features = ["integer", "std"] }

[dev-dependencies]
cddlib-rs = { workspace = true, features = ["gmprational"] }
